<?xml version="1.0"?>
<package>
  <name>message_generation_subsystem_buffers</name>
  <version>0.4.0</version>
  <description>Package modeling the build-time dependencies for generating language bindings of messages for subsystem buffers.
        Based on ros/message_generation</description>
  <maintainer email="dawid.seredynski@gmail.com">dseredyn</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/message_generation</url>
  <url type="bugtracker">https://github.com/ros/message_generation/issues</url>
  <url type="repository">https://github.com/ros/message_generation</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gencpp_subsystem_buffers</run_depend>
  <run_depend>geneus</run_depend>
  <run_depend>gennodejs</run_depend>
  <run_depend>genlisp</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>genpy</run_depend>
</package>
